--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,6 +3,8 @@ body {
     background-size: cover;
     background-position-y: -100px;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    overflow-x: hidden;
 }
 
 @media (max-width: 500px) {
@@ -14,12 +16,21 @@ body {
 .cover {
     background: rgba(0, 0, 0, 0.4);
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .navbar {
     height: 160px;
     width: 100%;
+    background: rgba(0, 0, 0, 1);
+    z-index: 100;
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    transition: 0.4s;
+}
+
+.transparent {
     background: rgba(0, 0, 0, 0);
 }
 
@@ -34,6 +45,11 @@ body {
     color: white !important;
 }
 
+.about {
+    padding-top: 160px;
+    height: calc(100vh - 160px);
+}
+
 .about-title {
     font-family: 'Georgia', serif;
     font-size: 2.7rem;
@@ -45,4 +61,22 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 2.1rem;
     color: white;
+}
+
+.gallery {
+    /* margin-top: 25rem; */
+    /* background: lightblue; */
+}
+
+.gallery img {
+    margin: 10px;
+    box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+}
+
+.gallery-title {
+    font-family: 'gloria-hallelujah', sans-serif;
+    font-size: 2.7rem;
+    color: white;
+    margin: 2rem;
 }
