--- a/static/css/index.css
+++ b/static/css/index.css
@@ -64,8 +64,7 @@ body {
 }
 
 .gallery {
-    /* margin-top: 25rem; */
-    /* background: lightblue; */
+    margin-top: 10rem;
 }
 
 .gallery img {
