--- a/static/css/index.css
+++ b/static/css/index.css
@@ -17,6 +17,8 @@ body {
     background: rgba(0, 0, 0, 0.4);
     width: 100%;
     height: 100%;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 .navbar {
@@ -28,6 +30,7 @@ body {
     top: 0;
     left: 0;
     transition: 0.4s;
+    margin-left: 0 !important;
 }
 
 .transparent {
@@ -39,6 +42,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 2rem;
     color: rgba(255, 255, 255, 0.5);
+    transition: 0.3s;
 }
 
 .selected {
@@ -64,11 +68,24 @@ body {
 }
 
 .gallery {
-    margin-top: 10rem;
+    margin: 10rem 0;
+}
+
+@media (min-width: 1300px) {
+    .images {
+        padding-left: 6rem;
+    }
+}
+
+@media (max-width: 992px) and (min-width: 400px) {
+    .images {
+        padding-left: 25%;
+    }
 }
 
 .gallery img {
     margin: 10px;
+    margin-left: 40px;
     box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
 }
@@ -78,4 +95,19 @@ body {
     font-size: 2.7rem;
     color: white;
     margin: 2rem;
+}
+
+.footer {
+    height: 200px;
+    width: 100%;
+    background: #2B2B2B;
+    margin-left: 0 !important;
+    padding-top: 2rem;
+    color: rgba(255, 255, 255, 0.5);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.3rem;
+}
+
+label {
+    margin-top: 2rem;
 }
