removed contact modal

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -111,3 +111,9 @@ body {
 label {
     margin-top: 2rem;
 }
+
+a#email:link, a#email:hover, a#email:visited, a#email:focus {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.5);
+    margin-left: 10px;
+}
